[package]
name = "graphql-seaorm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = "4.0.0"
axum = "0.5.6"
anyhow = "1.0.57"
dotenv = "0.15.0"
sea-orm = { version = "0.8.0", features = ["debug-print", "runtime-tokio-native-tls", 'sqlx-postgres']}
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
tokio = { version = "1.18.2", features = ["full"] }
entity = { path = "entity"}
migration = { path = "migration"}
serde_json = "1.0.81"
tower = "0.4.12"
thiserror = "1.0.31"
colored = "2.0.0"
